@@ -894,6 +894,7 @@ AC_ARG_ENABLE(gdb-stub,
     if test "$bx_debugger" = 1; then
       AC_MSG_ERROR([[--enable-debugger and --enable-gdb-stub are mutually exclusive]])
     fi
+    AC_MSG_WARN([This Bochs feature is not maintained yet and may fail])
    else
     AC_MSG_RESULT(no)
     AC_DEFINE(BX_GDBSTUB, 0)
@@ -1508,6 +1509,7 @@ AC_ARG_ENABLE(pcidev,
       esac
       AC_DEFINE(BX_SUPPORT_PCIDEV, 1)
       PCI_OBJS="$PCI_OBJS pcidev.o"
+      AC_MSG_WARN([This Bochs feature is not maintained yet and may fail])
     else
       AC_MSG_RESULT(no)
       AC_DEFINE(BX_SUPPORT_PCIDEV, 0)
@@ -2459,6 +2461,7 @@ if test "$with_svga" = yes; then
   GUI_CFLAGS="$GUI_CFLAGS"
   GUI_CXXFLAGS="$GUI_CXXFLAGS"
   GUI_LINK_OPTS="$GUI_LINK_OPTS \$(GUI_LINK_OPTS_SVGA)"
+  AC_MSG_WARN([This Bochs feature is not maintained yet and may fail])
 fi
 
 if test "$with_rfb" = yes; then
@@ -2526,6 +2529,7 @@ if test "$with_macos" = yes; then
   AC_DEFINE(BX_WITH_MACOS, 1)
   SPECIFIC_GUI_OBJS="$SPECIFIC_GUI_OBJS \$(GUI_OBJS_MACOS)"
   GUI_LINK_OPTS="$GUI_LINK_OPTS \$(GUI_LINK_OPTS_MACOS)"
+  AC_MSG_WARN([This Bochs feature is not maintained yet and may fail])
 fi
 
 if test "$with_carbon" = yes; then
@@ -2539,6 +2543,7 @@ if test "$with_carbon" = yes; then
     PRIMARY_TARGET=bochs.app/.build   # only for carbon application
   fi
   INSTALL_TARGET='install_macosx'
+  AC_MSG_WARN([This Bochs feature is not maintained yet and may fail])
 fi
 
 if test "$with_term" = yes; then
