@@ -1985,6 +1985,7 @@ In Bochs 1.3 and before, the X11 GUI was always the default.
       <entry>--with-carbon</entry>
       <entry>Compile for MacOS X with the Carbon GUI.  See the
       .conf.macosx file for the correct MacOS X compile options.
+      WARNING: This Bochs feature is not maintained yet and may fail.
       </entry>
     </row>
     <row>
@@ -2028,7 +2029,8 @@ In Bochs 1.3 and before, the X11 GUI was always the default.
         configure on a platform which supports running configure, so that
         you may then transfer the configured code over to the
         real compile environment.
-        </entry>
+        WARNING: This Bochs feature is not maintained yet and may fail.
+      </entry>
     </row>
     <row>
       <entry>--with-wx</entry>
@@ -2042,7 +2044,8 @@ In Bochs 1.3 and before, the X11 GUI was always the default.
       <entry>Use SVGALIB library for Linux.  This allows a full-screen
         text and graphics display without X windows.  The SVGALIB port
         was written by Igor Popik.
-        </entry>
+        WARNING: This Bochs feature is not maintained yet and may fail.
+      </entry>
     </row>
     <row>
       <entry>--with-nogui</entry>
@@ -2143,7 +2146,8 @@ to explicitly turn it off.
           needs to use the x86 hardware debugging facilities such as
           DR0..DR7, instruction and data breakpoints etc., then you
           should use this option.  Otherwise don't use it, as it
-          will slow down the emulation.</entry>
+          will slow down the emulation.
+      </entry>
     </row>
     <row>
       <entry>--enable-monitor-mwait</entry>
@@ -2154,11 +2158,6 @@ to explicitly turn it off.
       <entry>--enable-alignment-check</entry>
       <entry>yes if cpu level &gt;= 4</entry>
       <entry>support for alignment check in the CPU and #AC exception</entry>
-    </row>
-    <row>
-      <entry>--enable-misaligned-sse</entry>
-      <entry>no</entry>
-      <entry>support for AMD's misaligned SSE extension</entry>
     </row>
     <row>
       <entry>--enable-configurable-msrs</entry>
@@ -2341,6 +2340,7 @@ to explicitly turn it off.
       <entry>
       Enable support for the remote GDB stub. See <link linkend="debugging-with-gdb">Using Bochs and the remote GDB stub</link>.
       NOTE: This feature cannot be used if the Bochs debugger is also enabled.
+      WARNING: This Bochs feature is not maintained yet and may fail.
       </entry>
     </row>
     <row>
@@ -2377,6 +2377,7 @@ to explicitly turn it off.
       <entry>
         Enable PCI host device mapping support. This requires <option>--enable-pci</option>
         to be set as well as Linux 2.4, 2.6 or 3.x as host.
+        WARNING: This Bochs feature is not maintained yet and may fail.
       </entry>
     </row>
     <row>
